--- a/index.html
+++ b/index.html
@@ -11,22 +11,51 @@
     <body>
         <div class="container">
             <div class="container__slider">
-                <div class="container__slider_block">
-                    <div class="container__slider_item">
-                        <img class="container__slider_item__img" src="assets/img/1.jpg" alt="slide-1">
+                <input type="radio" id="check-1" name="slider" checked>
+                <input type="radio" id="check-2" name="slider">
+                <input type="radio" id="check-3" name="slider">
+                <input type="radio" id="check-4" name="slider">
+                <input type="radio" id="check-5" name="slider">
+                <div class="container__slider-slide">
+                    <div class="container__slider_block">
+                        <div class="container__slider_item">
+                            <img class="container__slider_item__img" src="assets/img/1.jpg" alt="slide-1">
+                            <p class="container__slider_item__txt">Здесь случайно весна не пробегала?</p>
+                        </div>
+                        <div class="container__slider_item">
+                            <img class="container__slider_item__img" src="assets/img/2.jpg" alt="slide-2">
+                            <p class="container__slider_item__txt">Он улетел, но обещал вернуться</p>
+                        </div>
+                        <div class="container__slider_item">
+                            <img class="container__slider_item__img" src="assets/img/3.jpg" alt="slide-3">
+                            <p class="container__slider_item__txt">Вези меня котень, в свою страну котенью</p>
+                        </div>
+                        <div class="container__slider_item">
+                            <img class="container__slider_item__img" src="assets/img/4.jpg" alt="slide-4">
+                            <p class="container__slider_item__txt">Вот это называется - наложить лапу</p>
+                        </div>
+                        <div class="container__slider_item">
+                            <img class="container__slider_item__img" src="assets/img/5.jpg" alt="slide-5">
+                            <p class="container__slider_item__txt">Неужели все мое?</p>
+                        </div>
                     </div>
-                    <div class="container__slider_item">
-                        <img class="container__slider_item__img" src="assets/img/2.jpg" alt="slide-2">
-                    </div>
-                    <div class="container__slider_item">
-                        <img class="container__slider_item__img" src="assets/img/3.jpg" alt="slide-3">
-                    </div>
-                    <div class="container__slider_item">
-                        <img class="container__slider_item__img" src="assets/img/4.jpg" alt="slide-4">
-                    </div>
-                    <div class="container__slider_item">
-                        <img class="container__slider_item__img" src="assets/img/5.jpg" alt="slide-5">
-                    </div>
+                </div>
+                <div class="container__slider-pagination">
+                    <label for="check-1">
+                        <a class="pagination_item"></a>
+                    </label>
+                    <label for="check-2">
+                        <a class="pagination_item"></a>
+                    </label>
+                    <label for="check-3">
+                        <a class="pagination_item"></a>
+                    </label>
+                    <label for="check-4">
+                        <a class="pagination_item"></a>
+                    </label>
+                    <label for="check-5">
+                        <a class="pagination_item"></a>
+                    </label>
                 </div>
             </div>
         </div>
